--- a/angular.json
+++ b/angular.json
@@ -70,10 +70,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "observable:build:production"
+              "browserTarget": "rxjs:build:production"
             },
             "development": {
-              "browserTarget": "observable:build:development"
+              "browserTarget": "rxjs:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -81,7 +81,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "observable:build"
+            "browserTarget": "rxjs:build"
           }
         },
         "test": {
@@ -103,5 +103,5 @@
       }
     }
   },
-  "defaultProject": "observable"
+  "defaultProject": "rxjs"
 }
