--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
     "@ngneat/until-destroy": "^9.0.2",
+    "@ngrx/effects": "^13.2.0",
+    "@ngrx/store": "^13.2.0",
+    "@ngrx/store-devtools": "^13.2.0",
     "angular-cli-ghpages": "^1.0.0",
     "ng2-charts": "^3.0.0-rc.7",
     "rxjs": "~7.4.0",
